# sql-lang

./: Spec.hs  sql-lang.cabal  stack.yaml
data/: customer_table.csv  dynamic.csv  expected_output_join.csv  expected_output_name.csv  expected_output_name_all.csv  langs.csv  orders_table.csv  people.csv  static.csv
src/: Internal.hs  Select.hs
src/Select/: Expression.hs  Relation.hs
test/: Spec.hs
