name:                sql-lang
version:             0.0.0.1
license:             MIT
author:              Adam Wespiser
maintainer:          adamwespiser@gmail.com
category:            SQL
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Select
                       Select.Relation
                       Select.Expression
                       Internal
  build-depends:       base >= 4.7 && < 5,
                       megaparsec -any,
                       split -any,
                       containers -any,
                       deepseq -any

                     
  default-language:    Haskell2010

test-suite relational-algebra-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , relational-algebra
  ghc-options:         -threaded -rtsopts
  default-language:    Haskell2010
